[project]
name = "jci-json-comparer"
version = "0.1.0"
description = "Comparador semántico de JSON AHU de Johnson Controls"
requires-python = ">=3.10"

[project.scripts]
jci-compare = "src.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
